feat: add statistics and cursor sync API
